--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GUIA3_RG19I04001"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"/>
+
 
         <activity
             android:name=".AgregarTrabajadorActivity"
@@ -33,7 +37,7 @@
 
 
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
